# bang

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scripts.py
.github/workflows/: ci.yml
bang/: __init__.py  api.py  app.py  response.py
bang/templates/: index.html
tests/: conftest.py  test_bang.py
