[tool.poetry]
name = "app"
version = "0.1.0"
description = "The framework that began history."
authors = ["Nathan Slaughter <nslaughter@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
webob = "^1.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
