[tool.poetry]
name = "bang"
version = "0.1.0"
description = "The framework that began history."
readme = "README.md"
authors = ["Nathan Slaughter <nslaughter@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
webob = "^1.8.6"
parse = "^1.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
requests = "^2.25.1"
requests-wsgi-adapter = "^0.4.1"
pre-commit = "^2.9.3"
toml = "^0.10.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
pre_commit = "scripts:pre_commit"
test = "scripts:test"
coverage = "scripts:coverage"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
